--- a/arm_project/Makefile
+++ b/arm_project/Makefile
@@ -11,8 +11,9 @@ money: moneycode.c parse.c lcm.c utils.c camera.c recog.cpp imgprocess.cpp
 	$(CROSS)g++ -c utils.c $(DEBUG)
 	$(CROSS)g++ -c camera.c
 	$(CROSS)g++ -c recog.cpp
+	$(CROSS)g++ -c pwm.c
 	$(CROSS)g++ -c imgprocess.cpp $(ROTATE)
-	$(CROSS)g++ -o money moneycode.o parse.o lcm.o utils.o camera.o recog.o imgprocess.o -ltesseract -lopencv_core -lopencv_highgui -lopencv_imgproc -lrt -ljpeg
+	$(CROSS)g++ -o money moneycode.o parse.o lcm.o utils.o camera.o recog.o pwm.o imgprocess.o -ltesseract -lopencv_core -lopencv_highgui -lopencv_imgproc -lrt -ljpeg
 
 debug: moneycode.c parse.c camera.c
 	gcc -c moneycode.c $(DEBUG)
